# careeros

backend/: .env  experience_response.txt  interview_response.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bd32dc60608_add_provider_identity_to_jobs.py  11a2190bc106_add_parsed_data_to_resumes.py  2c25fe639bc2_add_parsed_data_to_resumes.py  8b73ed15704a_create_candidate_profiles_table.py  8c5a949a3424_add_raw_text_to_resumes.py  90a8330aafa2_create_applications_table.py  95010b8d0e67_add_notes_to_applications.py  a0053f3d47ae_add_extended_job_fields.py  a1bbdc1d1e4d_create_resumes_table.py  a65dc10da827_create_jobs_table.py  c94b2e77aa29_remove_source_column_from_jobs.py  c9d823846aad_create_companies_table.py
backend/app/: main.py
backend/app/ai/: base.py  cover_letter.py  experience_optimizer.py  interview_questions.py  job_matcher.py  json_utils.py  manager.py  resume_builder.py  resume_parser.py  resume_tailor.py  summary_optimizer.py
backend/app/api/: ai.py  applications.py  candidate_profile.py  cover_letter.py  dashboard.py  interview_questions.py  job_match.py  jobs.py  providers.py  resume.py  resume_ai.py  resume_tailor.py  saved_jobs.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  application.py  candidate_profile.py  company.py  job.py  resume.py
backend/app/providers/: base.py  greenhouse.py  normalizer.py
backend/app/schemas/: candidate_profile.py  job_import.py  resume_profile.py
backend/app/services/: application_service.py  candidate_profile_service.py  (+7 more)
(+20 files in other folders)
