[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "weasyprint>=69.0",
]
